# PackWrapper

./: .gitignore  LICENSE  PackWrapperLauncher.py  packwrapper.bat  packwrapper.json  packwrapper.jsonc  packwrapper.sh  propertiestest_single.json  pyproject.toml  reqGen.bat  requirements.txt  runningtest-multiple.py  runningtest-single.py  test.ps1  test.sh
.github/workflows/: build.yml  release.yml  runtest.yml
PackWrapper/: Dependency.py  HashCalculate.py  Logger.py  PathEnum.py  PropertiesManager.py  Resourcepack.py  RunClient.py  ScriptSystem.py  StatusChecker.py  Utils.py  __init__.py
propertiestest_multiple/: test1.json  test2.json  test3.json  test4.json
src/PackWrapper/: Config.py  Logger.py  Resourcepack.py  ScriptSystem.py  StatusChecker.py  TaskSystem.py  Utils.py  __init__.py
src/packwrapper/: __init__.py  config.py  content.py  logger.py  lrucache.py  plugin.py  scriptsystem.py  tasksystem.py  utils.py
src/packwrapperextensions/: __init__.py  layerconvertor.py
testenv/: packwrapper.json  run.py  scripts.toml
testenv/version_script/: example.json  example.py  example2.json5  example2.py  example3.py  example3.toml
version_script/: _init.py  example.json  example.py  example2.json  example2.py
